[gd_scene load_steps=5 format=3 uid="uid://dews83ji74nuo"]

[ext_resource type="Script" uid="uid://chy8rvxme8oyw" path="res://src/actors/npc/base_npc.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/components/movement/movement_component.tscn" id="2"]
[ext_resource type="PackedScene" path="res://src/components/health_component.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/components/attack_component.tscn" id="4"]

[node name="BaseNPC" type="Node2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="MovementComponent" parent="." instance=ExtResource("2")]

[node name="HealthComponent" parent="." instance=ExtResource("3")]

[node name="AttackComponent" parent="." instance=ExtResource("4")]
